fix: align footer theme controls

--- a/assignments/assignment2/styles.css
+++ b/assignments/assignment2/styles.css
@@ -61,18 +61,36 @@ body {
 
 .hero-section {
     padding: 100px 90px 70px 110px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
 
 }
 
+.hero-section h2 {
+    font-size: 27px;
+    font-weight: 500;
+    font-family: sans-serif;
+}
+
 .cta {
-    margin-top: 30px;
+    margin-top: 10px;
     background-color: white;
     color: rgb(0, 0, 0);
     border: 1px solid rgb(255, 255, 255);
     border-radius: 25px;
     padding: 10px 20px;
     font-size: 16px;
+}
+
+.cta {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.cta-arrow {
+    width: 16px;
+    height: 16px;
+    margin-top: 2px;
 }
 
 .product-ss {
@@ -106,7 +124,8 @@ body {
     justify-content: center;
     border: 1px solid #21201b;
 }
-#trustedby-p{
+
+#trustedby-p {
     color: #ffff;
     font-size: 14px;
     margin-top: 30px;
@@ -121,32 +140,49 @@ body {
     display: flex;
     width: 85%;
     margin: 5% auto;
-    display: flex;
     justify-content: space-between;
     background-color: #21201b;
     border-radius: 10px;
     align-items: center;
+    padding: 25px;
+    gap: 20px;
+}
+
+.feature-content {
+    max-width: 500px;
+}
+
+
+.feature-content.right {
+    padding-right: 30px;
 }
 
 .feature h3 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    font-size: 22px;
     font-weight: 400;
-    padding-left: 30px;
-
+    margin-bottom: 12px;
 }
 
-.feature img {
+.feature-img {
     width: 800px;
     height: auto;
     border-radius: 10px;
-    padding: 25px;
-
 }
 
-.feature a {
+.feature-a {
     text-decoration: none;
     color: #BF4105;
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 21px;
+}
+
+.feature-arrow {
+    margin-top: 5px;
+    width: 14px;
+    height: 14px;
 }
 
 .grid-container {
@@ -187,7 +223,7 @@ body {
 .profile img {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
+    border-radius: 5px;
 }
 
 .profile h4 {
@@ -208,7 +244,7 @@ body {
 .frontier-title {
     padding-left: 120px;
     padding-top: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
 }
 
 .row {
@@ -305,13 +341,21 @@ p {
     font-weight: 500;
 }
 
+
 .changelog-link {
-    color: #ff6b00;
     text-decoration: none;
-    font-size: 16px;
+    color: #BF4105;
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
     padding-left: 120px;
-    display: inline-block;
-    margin-top: 25px;
+}
+
+.changelog-arrow {
+    margin-top: 5px;
+    width: 14px;
+    height: 14px;
+
 }
 
 .top-row {
@@ -321,80 +365,189 @@ p {
     margin-bottom: 6px;
 }
 
-.feature-a {
-    font-size: 18px;
+.research-panel {
+    display: flex;
+    width: 80%;
+    margin: 5% auto;
+    justify-content: space-between;
+    background-color: #1B1913;
+    border-radius: 10px;
+    align-items: center;
+    padding: 25px;
+    gap: 20px;
+    max-width: 100%;
 }
 
-.research-team {
-    margin-top: 40px;
-}
-.cta-section{   
-    height: 50vh;             
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;     
-  gap: 16px;
+.research-content {
+    max-width: 520px;
 }
 
-#cta-h1{
-  font-weight: 500;
-  font-size: 68px;
-  margin: 0;
+.research-content h3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    margin-bottom: 12px;
 }
 
-.download-btn{
-  background: white;
-  color: black;
-  padding: 10px 18px;
-  border-radius: 999px;
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: 500;
+.research-link {
+    text-decoration: none;
+    color: #BF4105;
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 20px;
 }
 
-.footer{
-  padding: 60px 80px 30px;
-  background:#1B1913;
+.research-arrow {
+    width: 14px;
+    height: 14px;
+    margin-top: 5px;
 }
 
-.footer-grid{
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-  margin-bottom: 60px;
-  padding-right: 170px;
-}
-.col{
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.col h4{
-  font-size: 15px;
-  font-weight: 500;
-  margin-bottom: 6px;
-  color: #999896;
+.research-img {
+    width: 800px;
+    height: auto;
+    max-width: fit-content;
+    border-radius: 10px;
 }
 
-.col a{
-  color:#ffff;
-  text-decoration:none;
-  font-size: 13px;
-  font-size: 15px;
+.cta-section {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
 }
 
-.col a:hover{
-  color:white;
+#cta-h1 {
+    font-weight: 500;
+    font-size: 68px;
+    margin: 0;
 }
 
-.footer-bottom{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 12px;
-  color:#bfbfbf;
-
-  padding-top: 20px;
+.download-btn {
+    background: white;
+    color: black;
+    padding: 10px 18px;
+    border-radius: 999px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 500;
 }
 
+.footer {
+    padding: 60px 80px 30px;
+    background: #1B1913;
+}
+
+.footer-grid {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    margin-bottom: 60px;
+    padding-right: 170px;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.col h4 {
+    font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 6px;
+    color: #999896;
+}
+
+.col a {
+    color: #ffff;
+    text-decoration: none;
+    font-size: 13px;
+    font-size: 15px;
+}
+
+.col a:hover {
+    color: white;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+    color: #bfbfbf;
+
+    padding-top: 20px;
+}
+
+.link {
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.arrow-icon {
+    width: 14px;
+    height: 14px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+    color: #bfbfbf;
+    padding-top: 20px;
+}
+
+.footer-controls {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.theme-group {
+    display: flex;
+    align-items: center;
+    background: #26241E;
+    border: 1px solid #2a2a2a;
+    border-radius: 999px;
+    padding: 4px;
+}
+
+.seg-btn {
+    background-color: transparent;
+    border: none;
+    width: 33px;
+    height: 21px;
+    border-radius: 999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.lang-pill {
+    background: #26241E;
+    border: 1px solid #2a2a2a;
+    border-radius: 999px;
+    padding: 6px 10px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    cursor: pointer;
+}
+
+.control-icon {
+    width: 16px;
+    height: 16px;
+
+}
